refactor(billing): refactor billing and payment code
